add new feature

--- a/website1/templates/pt copy 2.html
+++ b/website1/templates/pt copy 2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="{% static 'media.css' %}">
-    <title>100% BONUS SUL DEPOSITO</title>
+    <title>100% BÔNUS DEPÓSITO</title>
     <link rel="icon" href="{% static 'img/game_1.jpeg' %}" type="image/x-icon" sizes="16x16 32x32">
 
 
@@ -24,18 +24,17 @@
         </div>
     </nav>
     <div class="contador" id="contador">
-        <div class="expira">SCADE IN</div>
+        <div class="expira">EXPIRA EM</div>
         <div class="relogio">5:00</div>
-        <div class="oferta1">Offerta per un tempo limitato</div>
-    </div>
-    
+        <div class="oferta1">Oferta por tempo limitado</div>
+      </div>
  
 
     <div class="espaco-mobile">
         <img src="{% static 'img/mobile2.png' %}" alt="" srcset="">
         
         <a class="reg-mobil3" href="https://solcasino.life/cb2ab781a">
-            <input type="button" value="REGISTRATI">
+            <input type="button" value="REGISTRAR-SE">
         </a>
 
         
@@ -51,24 +50,23 @@
                     <path fill-rule="evenodd" d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.46 8.288a.75.75 0 0 1 1.06 1.06l-8.53 8.53a.75.75 0 0 1-1.06 0l-4.47-4.47a.75.75 0 0 1 1.06-1.06l3.94 3.94 7.47-7.47a.75.75 0 0 1 1.06 0z"/>
                   </svg>
                   
-                  <p style="display: inline; color: rgb(112, 12, 12); ">Bonus sul primo deposito attivo!</p>
+                  <p style="display: inline; color: rgb(112, 12, 12); ">Bônus de primeiro depósito ativo!</p>
                   
             </div>
 
               
-            <p class="oferta" >Offerta Esclusiva<br>
+            <p class="oferta" >Oferta Exclusiva<br>
                 
-                <b style="font-size: 40px; margin:0;">100% BONUS <br> SUL DEPOSITO</p>
-                <p class="bonus">+75 giri GRATIS! </p>
+                <b style="font-size: 40px; margin:0;">100% DE BÔNUS <br> DE DEPÓSITO</p>
+                <p class="bonus">+75 giros de GRAÇA! </p>
                 <a href="https://solcasino.life/cb2ab781a">
                     <div class="reg">
                         <img src="{% static 'img/wolf_blaze_ticker.png' %}" alt="" srcset="">
-                        <input type="button" value="REGISTRATI">
+                        <input type="button" value="REGISTRAR-SE">
                     </div>
                 </a>
 
             </p>
-
             <div class="espaco">
                 
             </div>
@@ -76,22 +74,22 @@
     </b>
     <div class="painel">
 
+
         <video  type="video/webm" class="desktop-video" autoplay muted loop poster="{% static 'img/poster.png' %}" >
             <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/desktop.mp4" type="video/webm">
-            Il tuo browser non supporta l'elemento video.
+            Seu navegador não suporta o elemento de vídeo.
         </video>
         <video type="video/mp4" class="mobile-video" autoplay muted loop>
             <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/mobile.mp4" type="video/mp4">
-            Il tuo browser non supporta l'elemento video.
+            Seu navegador não suporta o elemento de vídeo.
         </video>
     </div>
 
-
     <div class="container-casino">
         <center>
-            <h6 class="headline">Scopri tutti i nostri giochi</h6>
+            <h6 class="headline">Confira todos os nossos jogos</h6>
             <h1 class="title-headline">
-                L'unico casinò di cui hai bisogno
+                O Único Casino Que Você Precisa
             </h1>
             <h1 class="linha"></h1>
             <div class="row-casino">
@@ -101,19 +99,19 @@
                             <img src="{% static 'img/jackpot.png' %}" alt="" srcset="">
                         </div>
                     </div>
-                    <div class="step">Slot Machines
+                    <div class="step">Caça Níqueis
                         <div class="circle">
                             <img src="{% static 'img/slots.png' %}" alt="" srcset="">
                         </div>
                     </div>
-                    <div class="step">Casinò Live
+                    <div class="step">Cassino ao Vivo
                         <div class="circle">
                             <img src="{% static 'img/live.png' %}" alt="" srcset="">
                         </div>
                     </div>
                 </div>
                 <div class="row-ca-2">
-                    <div class="step">Roulette Online
+                    <div class="step">Roleta Online
                         <div class="circle">
                             <img src="{% static 'img/roulette.png' %}" alt="" srcset="">
                         </div>
@@ -123,7 +121,7 @@
                             <img src="{% static 'img/blackjack.png' %}" alt="" srcset="">
                         </div>
                     </div>
-                    <div class="step">REGISTRATI
+                    <div class="step">REGISTRAR-SE
                         <div class="circle">
                             <img src="{% static 'img/signup.png' %}" alt="" srcset="">
                         </div>
@@ -131,7 +129,6 @@
                 </div>
             </div>
         </center>
-
     </div>
 
     <center>
@@ -166,9 +163,8 @@
 
     </center>
     <footer>
-        <p>© 2024 Playspot. Tutti i diritti riservati.</p>
+        <p>© 2024 Playspot. Todos os direitos reservados.</p>
     </footer>
-
     <script>
       // Tempo em minutos
 const tempoTotal = 5;
@@ -205,125 +201,124 @@ const intervalo = setInterval(atualizarContador, 1000);
 
 
 
-nomes = [
-"Giovanni F.",
-"Maria R.",
-"Pietro L.",
-"Luca S.",
-"Anna C.",
-"Gustavo H.",
-"Enrico S.",
-"Rai P.",
-"Carina A.",
-"Luan S.",
-"Caio V.",
-"Samara C.",
-"Aline G.",
-"Mayara R.",
-"Sonia G.",
-"Paolo H.",
-"Lisa J.",
-"Luisa O.",
-"Fernando P.",
-"Rodrigo M.",
-"Isabella C.",
-"Talita B.",
-"Luciano N.",
-"Roberto F.",
-"Mariana T.",
-"Andrea L.",
-"Giuliana S.",
-"Fabiana V.",
-"Renato B.",
-"Natalia M.",
-"Diego G.",
-"Vanessa C.",
-"Vinicius R.",
-"Renan A.",
-"Marcela P.",
-"Vittoria N.",
-"Thiago D.",
-"Andrea K.",
-"Eduardo J.",
-"Carla M.",
-"Giovanna B.",
-"Raffaele C.",
-"Bruna F.",
-"Filippo G.",
-"Mariana S.",
-"Guglielmo V.",
-"Giulia Z.",
-"Luigi F.",
-"Monica E.",
-"Carlo T.",
-"Giulio P.",
-"Marcello R.",
-"Patrizia L.",
-"Cristina N.",
-"Gabriele Q.",
-"Daniela X.",
-"Ugo W.",
-"Tatiana Y.",
-"Thiago U.",
-"Fabio I.",
-"Bruno H.",
-"Nathalie J.",
-"Leonardo K.",
-"Renata V.",
-"Marina Z.",
-"Roberto M.",
-"Amanda N.",
-"Matteo B.",
-"Fernanda C.",
-"Luca D.",
-"Vanessa E.",
-"Raffaele F.",
-"Giuseppe G.",
-"Cecilia H.",
-"Filippo I.",
-"Leandro J.",
-"Viviana L.",
-"Giovanni M.",
-"Silvia N.",
-"Marcello O.",
-"Bruno P.",
-"Eduarda Q.",
-"Bianca R.",
-"Luigi S.",
-"Fabio T.",
-"Diego U.",
-"Raffaele V.",
-"Debora X.",
-"Patrizia Y.",
-"Wesley Z.",
-"Rodolfo A.",
-"Tais B.",
-"Gabriella C.",
-"Giovanni D.",
-"Filippo E.",
-"Renata F.",
-"Beatrice G.",
-"Gustavo H.",
-"Giuliana I.",
-"Luciana J.",
-"Giuliana K.",
-"Renato L.",
-"Luana M.",
-"Marcela N.",
-"Thiago O.",
-"Luigi P.",
-"Rodrigo Q.",
-"Vanessa R.",
-"Riccardo S.",
-"Enrico T.",
-"Anna V.",
-"Camilla W.",
-"Amanda X.",
-"Isabella Y.",
-"Renan Z.",
-"Giovanni A.",
-"Mariana B."
-]
+        var nomes = [
+            "João F.",
+            "Maria R.",
+            "Pedro L.",
+            "Lucas S.",
+            "Ana C.",
+            "Gustavo H.",
+            "Henrique S.",
+            "Raian P.",
+            "Carine A.",
+            "Luan S.",
+            "Caio V.",
+            "Samara C.",
+            "Aline G.",
+            "Mayara R.",
+            "Sônia G.",
+            "Paulo H.",
+            "Lisa J.",
+            "Luisa O.",
+            "Fernando P.",
+            "Rodrigo M.",
+            "Isabela C.",
+            "Talita B.",
+            "Luciano N.",
+            "Roberto F.",
+            "Mariana T.",
+            "André L.",
+            "Juliana S.",
+            "Fabiana V.",
+            "Renato B.",
+            "Nathalia M.",
+            "Diego G.",
+            "Vanessa C.",
+            "Vinícius R.",
+            "Renan A.",
+            "Marcela P.",
+            "Vitoria N.",
+            "Thiago D.",
+            "Andressa K.",
+            "Eduardo J.",
+            "Carla M.",
+            "Giovanna B.",
+            "Rafael C.",
+            "Bruna F.",
+            "Felipe G.",
+            "Mariane S.",
+            "Guilherme V.",
+            "Julia Z.",
+            "Luiz Felipe A.",
+            "Monique E.",
+            "Carlos T.",
+            "Julio P.",
+            "Marcelo R.",
+            "Patricia L.",
+            "Cristina N.",
+            "Gabriel Q.",
+            "Daniela X.",
+            "Hugo W.",
+            "Tatiane Y.",
+            "Thiago U.",
+            "Fábio I.",
+            "Bruno H.",
+            "Nathalie J.",
+            "Leonardo K.",
+            "Renata V.",
+            "Marina Z.",
+            "Robson M.",
+            "Amanda N.",
+            "Matheus B.",
+            "Fernanda C.",
+            "Lucas D.",
+            "Vanessa E.",
+            "Raphael F.",
+            "José G.",
+            "Cecília H.",
+            "Felipe I.",
+            "Leandro J.",
+            "Vivian L.",
+            "Giovanni M.",
+            "Silvia N.",
+            "Marcelo O.",
+            "Bruno P.",
+            "Eduarda Q.",
+            "Bianca R.",
+            "Luiz S.",
+            "Fabio T.",
+            "Diego U.",
+            "Rafael V.",
+            "Débora X.",
+            "Patrícia Y.",
+            "Wesley Z.",
+            "Rodolfo A.",
+            "Thaís B.",
+            "Gabriela C.",
+            "Giovani D.",
+            "Felipe E.",
+            "Renata F.",
+            "Beatriz G.",
+            "Gustavo H.",
+            "Juliana I.",
+            "Luciana J.",
+            "Juliana K.",
+            "Renato L.",
+            "Luana M.",
+            "Marcela N.",
+            "Thiago O.",
+            "Luiz P.",
+            "Rodrigo Q.",
+            "Vanessa R.",
+            "Ricardo S.",
+            "Henrique T.",
+            "Ana V.",
+            "Camila W.",
+            "Amanda X.",
+            "Isabel Y.",
+            "Renan Z.",
+            "João A.",
+            "Mariana B."];
 
         var jogos = ['Blackjack', 'Slots Wolf', 'Fortune Wheel', 'Fortune Tiger', 'Bufalo Slots'];
         var correntes = ['€', '€'];
@@ -342,8 +337,7 @@ nomes = [
             var numero = Math.floor(Math.random() * 701) + 300;
 
             var p = document.createElement('p');
-            p.innerHTML = nome + ' ha vinto ' + '<span>' + corrente + " " + numero.toFixed(2) + '</span>' + ' in ' + jogo;
-
+            p.innerHTML = nome + ' ganhou ' + '<span>' + corrente + " " + numero.toFixed(2) + '</span>' + ' no ' + jogo;
 
             marquee.appendChild(p);
         }
