--- a/website1/templates/pt.html
+++ b/website1/templates/pt.html
@@ -24,7 +24,7 @@
         }(window, document, 'script',
             'https://connect.facebook.net/en_US/fbevents.js');
         fbq('init', '481459444213430');
-        fbq('track', 'PageView');
+        fbq('track', 'ViewContent');
     </script>   
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=481459444213430&ev=PageView&noscript=1" /></noscript>
