--- a/website1/templates/pt.html
+++ b/website1/templates/pt.html
@@ -54,7 +54,7 @@
     <div class="espaco-mobile">
         <img src="{% static 'img/mobile2.png' %}" alt="" srcset="">
 
-        <a class="reg-mobil3" href="https://solcasino.life/cb2ab781a">
+        <a class="reg-mobil3" href="https://boomertraff.com/g35077dc3">
             <input type="button" value="REGISTRATI">
         </a>
 
@@ -82,7 +82,7 @@
             <b style="font-size: 40px; margin:0;">100% BONUS <br> SUL DEPOSITO
         </p>
         <p class="bonus">+75 giri GRATIS! </p>
-        <a href="https://solcasino.life/cb2ab781a">
+        <a href="https://boomertraff.com/g35077dc3">
             <div class="reg">
                 <input type="button" value="REGISTRATI">
             </div>
@@ -160,7 +160,7 @@
     <center>
         <h1 class="nome">Jogos Populares</h1>
         <h1 class="linha"></h1>
-        <a href="https://solcasino.life/cb2ab781a" target="_blank" rel="noopener noreferrer">
+        <a href="https://boomertraff.com/g35077dc3" target="_blank" rel="noopener noreferrer">
             <div class="container">
                 <div class="row-1">
                     <img src="{% static 'img/game_1.jpeg' %}" alt="image" srcset="">
