--- a/website1/templates/pt.html
+++ b/website1/templates/pt.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="{% static 'media.css' %}">
-    <title>100% BONUS SUL DEPOSITO</title>
+    <title>100% BÔNUS DE DEPOSITO</title>
     <link rel="icon" href="{% static 'img/game_1.jpeg' %}" type="image/x-icon" sizes="16x16 32x32">
 
 
@@ -25,9 +25,9 @@
         </div>
     </nav>
     <div class="contador" id="contador">
-        <div class="expira">SCADE IN</div>
+        <div class="expira">EXPIRA EM</div>
         <div class="relogio">5:00</div>
-        <div class="oferta1">Offerta per un tempo limitato</div>
+        <div class="oferta1">Oferta por tempo limitado!</div>
     </div>
 
 
@@ -35,8 +35,8 @@
     <div class="espaco-mobile">
         <img src="{% static 'img/mobile2.png' %}" alt="" srcset="">
 
-        <a class="reg-mobil3" href="https://boomertraff.com/g35077dc3">
-            <input type="button" value="REGISTRATI">
+        <a class="reg-mobil3" href="https://record.ponetopartners.com/_Z6wQjQTISBJTamwAHGu6mWNd7ZgqdRLk/2/?pg=0&payload=">
+            <input type="button" value="REGISTRAR-SE">
         </a>
 
 
@@ -53,19 +53,19 @@
                     d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.46 8.288a.75.75 0 0 1 1.06 1.06l-8.53 8.53a.75.75 0 0 1-1.06 0l-4.47-4.47a.75.75 0 0 1 1.06-1.06l3.94 3.94 7.47-7.47a.75.75 0 0 1 1.06 0z" />
             </svg>
 
-            <p style="display: inline; color: rgb(112, 12, 12); ">Bonus sul primo deposito attivo!</p>
+            <p style="display: inline; color: rgb(112, 12, 12); ">Bônus de primeiro depósito ativo!</p>
 
         </div>
 
 
-        <p class="oferta">Offerta Esclusiva<br>
+        <p class="oferta">Offerta Exclusiva<br>
 
-            <b style="font-size: 40px; margin:0;">100% BONUS <br> SUL DEPOSITO
+            <b style="font-size: 40px; margin:0;">100% DE BONUS <br> DE DEPÓSITO
         </p>
-        <p class="bonus">+75 giri GRATIS! </p>
-        <a href="https://boomertraff.com/g35077dc3">
+        <p class="bonus">+75 giros de GRAÇA! </p>
+        <a href="https://record.ponetopartners.com/_Z6wQjQTISBJTamwAHGu6mWNd7ZgqdRLk/2/?pg=0&payload=">
             <div class="reg">
-                <input type="button" value="REGISTRATI">
+                <input type="button" value="REGISTAR-SE">
             </div>
         </a>
 
@@ -83,19 +83,22 @@
                 type="video/webm">
             Il tuo browser non supporta l'elemento video.
         </video>
-        <video type="video/mp4" class="mobile-video" autoplay muted loop>
-            <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/mobile.mp4"
-                type="video/mp4">
-            Il tuo browser non supporta l'elemento video.
-        </video>
+        <div class="mobile-wave">
+            <video type="video/mp4" class="mobile-video" autoplay muted loop>
+                <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/mobile.mp4"
+                    type="video/mp4">
+                Il tuo browser non supporta l'elemento video.
+            </video>
+        </div>
+
     </div>
 
 
     <div class="container-casino">
         <center>
-            <h6 class="headline">Scopri tutti i nostri giochi</h6>
+            <h6 class="headline">Confira todos os nossos jogos</h6>
             <h1 class="title-headline">
-                L'unico casinò di cui hai bisogno
+                O Único Cassino Que Você Precisa
             </h1>
             <h1 class="linha"></h1>
             <div class="row-casino">
@@ -127,7 +130,7 @@
                             <img src="{% static 'img/blackjack.png' %}" alt="" srcset="">
                         </div>
                     </div>
-                    <div class="step">REGISTRATI
+                    <div class="step">REGISTRA-SE
                         <div class="circle">
                             <img src="{% static 'img/signup.png' %}" alt="" srcset="">
                         </div>
@@ -141,7 +144,7 @@
     <center>
         <h1 class="nome">Jogos Populares</h1>
         <h1 class="linha"></h1>
-        <a href="https://boomertraff.com/g35077dc3" target="_blank" rel="noopener noreferrer">
+        <a href="https://record.ponetopartners.com/_Z6wQjQTISBJTamwAHGu6mWNd7ZgqdRLk/2/?pg=0&payload=" target="_blank" rel="noopener noreferrer">
             <div class="container">
                 <div class="row-1">
                     <img src="{% static 'img/game_1.jpeg' %}" alt="image" srcset="">
@@ -346,7 +349,7 @@
             var numero = Math.floor(Math.random() * 701) + 300;
 
             var p = document.createElement('p');
-            p.innerHTML = nome + ' ha vinto ' + '<span>' + corrente + " " + numero.toFixed(2) + '</span>' + ' in ' + jogo;
+            p.innerHTML = nome + ' ganhou ' + '<span>' + corrente + " " + numero.toFixed(2) + '</span>' + ' no ' + jogo;
 
 
             marquee.appendChild(p);
