--- a/static/media.css
+++ b/static/media.css
@@ -2,13 +2,17 @@
 
     
     .row-1 img{
-        max-width: 100px;
-        min-height: 190px;
+        padding: 0px;
+        max-width: 90px;
+        min-height: 15px;
+        max-height: 140px;
     
     }
     .row-2 img{
-        max-width: 100px;
-        min-height: 19px;
+      padding: 0px;
+      max-width: 90px;
+      min-height: 15px;
+      max-height: 140px;
     }
     .step{
         min-height: 50px;
@@ -20,7 +24,8 @@
     .row-ca-1, .row-ca-2{
         display: grid;
         width: 100%;
-        margin: 0;
+        margin: 0px;
+        padding: 0px;
     }
     .circle{
         max-width: 120px;
@@ -111,9 +116,9 @@
         }
       }
       
-      .reg-mobil3{
+      .button{
         margin: 0 auto ;
-        max-width: 70%;
+
         animation: pulsar 3s infinite; /* 3 segundos por ciclo */
         animation-delay: 0s, 3s; /* Inicia imediatamente, depois de 3 segundos, e assim por diante */
 
@@ -141,6 +146,22 @@
   scale: 0.8;
   margin-top: -10px;
 
+}
+.container-casino{
+  display: none;
+}
+.nome{
+  display: none;
+}
+.button{
+  display: block;
+  scale: 0.4;
+  top: -35px
+  
+}
+
+footer p{
+  scale: 0.7;
 }
 
 }
