--- a/website1/templates/pt.html
+++ b/website1/templates/pt.html
@@ -10,41 +10,9 @@
     <link rel="stylesheet" href="{% static 'media.css' %}">
     <title>100% BÔNUS DE DEPOSITO</title>
     <link rel="icon" href="{% static 'img/game_1.jpeg' %}" type="image/x-icon" sizes="16x16 32x32">
-<!-- Meta Pixel Code -->
-<script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '811245724232408');
-    fbq('track', 'ViewContent');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=811245724232408&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
-<!-- Meta Pixel Code -->
-<script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1377538499572939');
-    fbq('track', 'ViewContent');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1377538499572939&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
+
 </head>
+
 
 <body>
 
@@ -58,7 +26,7 @@
     </nav>
     <div class="contador" id="contador">
         <div class="expira">EXPIRA EM</div>
-        <div class="relogio">5:00</div>
+        <div class="relogio">20:00</div>
         <div class="oferta1">Oferta por tempo limitado!</div>
     </div>
 
@@ -67,9 +35,14 @@
     <div class="espaco-mobile">
         <img src="{% static 'img/mobile2.png' %}" alt="" srcset="">
 
-        <a class="reg-mobil3" href="https://record.ponetopartners.com/_Z6wQjQTISBJTamwAHGu6mWNd7ZgqdRLk/2/?pg=0&payload=">
-            <input type="button" value="REGISTRAR-SE">
-        </a>
+        <div ontouchstart="">
+            <center>
+                <div class="button">
+                    <a href="https://mnr-ircp01.com/c73471629">Registrar-se</a>
+                  </div>
+            </center>
+
+          </div>
 
 
 
@@ -95,7 +68,7 @@
             <b style="font-size: 40px; margin:0;">100% DE BONUS <br> DE DEPÓSITO
         </p>
         <p class="bonus">+75 giros de GRAÇA! </p>
-        <a href="https://record.ponetopartners.com/_Z6wQjQTISBJTamwAHGu6mWNd7ZgqdRLk/2/?pg=0&payload=">
+        <a target="_blank" href="https://mnr-ircp01.com/c73471629">
             <div class="reg">
                 <input type="button" value="REGISTAR-SE">
             </div>
@@ -187,7 +160,7 @@
                     <img src="{% static 'img/game_6.jpeg' %}" alt="image" srcset="">
                     <img src="{% static 'img/game_7.jpeg' %}" alt="image" srcset="">
                     <img src="{% static 'img/game_8.jpeg' %}" alt="image" srcset="">
-                    <img src="{% static 'img/game_9.jpeg' %}" alt="image" srcset="">
+
                 </div>
                 <div class="row-2">
                     <img src="{% static 'img/game_10.jpeg' %}" alt="image" srcset="">
@@ -195,22 +168,22 @@
                     <img src="{% static 'img/game_12.jpeg' %}" alt="image" srcset="">
                     <img src="{% static 'img/game_13.jpeg' %}" alt="image" srcset="">
                     <img src="{% static 'img/game_14.jpeg' %}" alt="image" srcset="">
-                    <center src="{% static 'img/game_15.jpeg' %}" alt="image" srcset="">
+                    <img src="{% static 'img/game_15.jpeg' %}" alt="image" srcset="">
                     <img src="{% static 'img/game_16.jpeg' %}" alt="image" srcset="">
                     <img src="{% static 'img/game_17.jpeg' %}" alt="image" srcset="">
-                    <img src="{% static 'img/game_18.jpeg' %}" alt="image" srcset="">
+
                 </div>
             </div>
         </a>
 
-    </center>
+    </img="{%>
     <footer>
-        <p>© 2024 Playspot. Tutti i diritti riservati.</p>
+        <p>© 2024 Playspot. Todos Direitos Reservados</p>
     </footer>
 
     <script>
         // Tempo em minutos
-        const tempoTotal = 5;
+        const tempoTotal = 20;
 
         // Converter minutos para segundos
         let tempoRestante = tempoTotal * 60;
